Link to GitHub added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://github.com/johannesck/portfolio_jck" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2016, Johannes C.</p>
     </footer>
