--- a/music.html
+++ b/music.html
@@ -19,7 +19,7 @@
 
 <main>
     <div class="youtube">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_PbMe3K8ERY" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_PbMe3K8ERY" allowfullscreen></iframe>
     </div>
 </main>
 <footer>
