Link and styling added
Added a link to the Music page on the home page as well as styling for
a:hover

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h2>Background</h2>
         <p>I’m an aspiring web designer as well as an academic teacher. I live and work in Switzerland.</p>
         <p>I’m also an amateur guitar player who’s always interested in expanding my skills.</p>
+        <p>Check out my guitar video on the <a href="music.html">Music</a> page.</p>
       </div> 
 
       <div class="card">
