Profile picture added, background adjusted

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </div>
 
     <header>
-      <!--<img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">-->
+      <img src="images/me.png" alt="My Gravatar" class="profile-image">
       <h1 class="tag name">Hello, I’m Johannes</h1>
       <h3 class="tag location">My home is in Switzerland</h3>
+      <img src="images/arrow.svg" alt="down-arrow" class="arrow">
     </header>
 
     <main class="flex">
